--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Prototype BPJSTKU</string>
+    <string name="app_name">BPJSTKUY</string>
     <string name="company">BPJS Ketenagakerjaan</string>
     <string name="login_autofill"><u>Klik untuk isi form otomatis</u></string>
     <string name="forgot_password"><u>Lupa akun</u></string>
